--- a/client/views/settings/rule-add-tenant.html
+++ b/client/views/settings/rule-add-tenant.html
@@ -84,7 +84,8 @@
             </button>
         </div>
 
-        <div class="form__row">
+        <div class="form__row"
+            ng-if="!newRule.action.tenant.outputChannel">
             <div class="sd-line-input sd-line-input--is-select">
                 <label class="sd-line-input__label">Route</label>
                 <select class="sd-line-input__select"
@@ -101,7 +102,7 @@
             <sd-check ng-model="newRule.action.fbia">Publish on Facebook</sd-check>
         </div>
         <div class="form__row">
-            <sd-check ng-model="newRule.action.paywallSecured">Paywall Secured</sd-check>
+            <sd-check ng-if="!newRule.action.tenant.outputChannel" ng-model="newRule.action.paywallSecured">Paywall Secured</sd-check>
         </div>
     </div>
 </form>
