--- a/client/styles/helperElements.scss
+++ b/client/styles/helperElements.scss
@@ -413,3 +413,31 @@ to {opacity: 1}
 .sp-border {
     border: 1px solid #e5e5e5
 }
+
+
+.iconOnHover {
+    position: relative;
+    cursor: pointer;
+    i {
+        opacity: 0;
+        background: rgba(0,0,0, 0.5);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        transition: opacity 0.3s ease-in-out;
+
+        &::before {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin-left: -1.5rem;
+            margin-top: -1.5rem;
+            color: $white;
+            font-size: 3rem;
+        }
+    }
+
+    &:hover i {
+        opacity: 1;
+    }
+}
