--- a/client/views/manager/manage-site/routes-tree.html
+++ b/client/views/manager/manage-site/routes-tree.html
@@ -22,6 +22,12 @@
         </div>
     </div>
 </div>
-<ul ng-show="route.children.length && !route.closed">
-    <li ng-repeat="route in route.children | filter: {type: webPublisher.routeType}" ng-include="'routes-tree.html'"></li>
+<ul ng-show="route.children.length && !route.closed" dnd-list="route.children" dnd-drop="webPublisher.reorderRoute(route, item, index)">
+    <li ng-repeat="route in route.children"
+        ng-include="'routes-tree.html'"
+        dnd-draggable="route"
+        dnd-dragstart="route.dragging = true"
+        dnd-dragend="route.dragging = false"
+        ng-hide="route.dragging"
+        ></li>
 </ul>
