--- a/client/views/content-lists/content-list-automatic.html
+++ b/client/views/content-lists/content-list-automatic.html
@@ -1,115 +1,130 @@
-<div class="subnav paneLayout bg--white">
-    <div class="flat-searchbar monitoring-backlink">
-        <div class="search-handler">
-            <button class="backlink" ng-click="webPublisherContentLists.changeView('content-lists')"></button>
+
+<div class="flex-grid__item flex-grid__item--d-flex flex-grid__item--column">
+    <div class="subnav subnav--lower-z-index subnav--mid-blue-grey">
+        <button class="navbtn navbtn--left" ng-click="webPublisherContentLists.changeView('content-lists', false)">
+            <i class="icon-th"></i>
+        </button>
+        <button class="navbtn navbtn--left navbtn--darker" ng-click="webPublisherContentLists.filterOpen = !webPublisherContentLists.filterOpen" ng-class="{'navbtn--active': webPublisherContentLists.filterOpen}">
+            <i class="icon-filter-large"></i>
+        </button>
+        <div class="dropdown" dropdown="">
+            <button class="dropdown__toggle navbtn navbtn--text-only dropdown-toggle" dropdown-toggle="">{{webPublisherContentLists.selectedList.name}}
+                <span class="dropdown__caret"></span>
+            </button>
+            <ul class="dropdown__menu scrollable">
+                <li><div class="dropdown__menu-label">Content lists</div></li>
+                <li ng-repeat="list in lists | orderBy: 'id' track by list.id">
+                    <button ng-click="webPublisherContentLists.openListCriteria(list)">{{list.name}}</button>
+                </li>
+            </ul>
         </div>
     </div>
-    <div class="filter-trigger" title="Filters" ng-click="webPublisherContentLists.filterOpen = !webPublisherContentLists.filterOpen" ng-class="{'filter-trigger--active': webPublisherContentLists.filterOpen}">
-        <i class="icon-filter-large"></i>
-    </div>
-    <h3 class="page-nav-title">{{newList.name}}</h3>
-</div>
-<div class="paneLayout paneLayout--headerMargin">
-    <div class="paneLayout__leftPane paneContent" ng-class="{'paneLayout__leftPane--open': webPublisherContentLists.filterOpen}">
-        <div class="paneContent__header paneContent__header--dark">
-            <h3 class="pull-left" translate>Automatic List Criteria</h3>
-            <div ng-click="webPublisherContentLists.filterOpen = !webPublisherContentLists.filterOpen" class="close-filter">
-                <i class="icon-close-small"></i>
+
+    <div class="sd-column-box--3">
+        <!-- filters -->
+        <div class="sd-filters-panel sd-filters-panel--border-right">
+            <div class="side-panel side-panel--transparent side-panel--shadow-right">
+                <div class="side-panel__header side-panel__header--border-b">
+                        <a class="icn-btn side-panel__close" sd-tooltip="Close filters" flow="left" ng-click="webPublisherContentLists.filterOpen = !webPublisherContentLists.filterOpen"><i class="icon-close-small"></i></a>
+                    <h3 class="side-panel__heading side-panel__heading--big">Automatic List Criteria</h3>
+                </div>
+                <div class="side-panel__content">
+                    <div class="sd-loader" ng-if="loading"></div>
+                    <div class="side-panel__content-block">
+                        <div class="form__row">
+                            <div class="sd-line-input sd-line-input--no-margin">
+                                <sd-tag-input
+                                    ng-if="routes"
+                                    ng-model="webPublisherContentLists.selectedRoutes"
+                                    data-label="Routes"
+                                    data-items="routes"
+                                    data-field="name"
+                                    data-freetext="false" >
+                                    <tags-input
+                                        ng-model="model"
+                                        add-from-autocomplete-only="{{items ? !freetext : false}}"
+                                        show-button="{{!!items}}"
+                                        display-property="{{field}}"
+                                        use-strings="{{!field}}"
+                                    ></tags-input>
+                                </sd-tag-input>
+                            </div>
+                        </div>
+                        <div class="form__row">
+                            <div class="sd-line-input sd-line-input--no-margin">
+                                <sd-tag-input ng-model="newList.filters.author" data-label="Authors">
+                                    <tags-input ng-model="model" add-from-autocomplete-only="{{items ? !freetext : false}}" show-button="{{!!items}}" display-property="{{field}}" use-strings="{{!field}}"></tags-input>
+                                </sd-tag-input>
+                            </div>
+                        </div>
+                        <div class="form__row form__row--flex">
+                            <div class="sd-line-input sd-line-input--no-margin">
+                                <a class="icn-btn sd-line-input__icon-right"><i class="icon-calendar"></i></a>
+                                <label class="sd-line-input__label">Published date</label>
+                                <div sd-datepicker data-format="YYYY-MM-DD" name="publishedAt" id="publishedAt" ng-model="newList.filters.publishedAt"></div>
+                            </div>
+                        </div>
+                        <div class="form__row form__row--flex">
+                            <div class="sd-line-input sd-line-input--no-margin">
+                                <label class="sd-line-input__label">Published after</label>
+                                <div sd-datepicker data-format="YYYY-MM-DD" name="publishedAfter" id="publishedAfter" ng-model="newList.filters.publishedAfter"></div>
+                            </div>
+                        </div>
+                        <div class="form__row form__row--flex">
+                            <div class="sd-line-input sd-line-input--no-margin">
+                                <label class="sd-line-input__label">Published before</label>
+                                <div sd-datepicker data-format="YYYY-MM-DD" name="publishedBefore" id="publishedBefore" ng-model="newList.filters.publishedBefore"></div>
+                            </div>
+                        </div>
+                        <div class="form__row form__row--flex">
+                            <div class="sd-line-input">
+                                <label class="sd-line-input__label">Metadata</label>
+                                <div ng-repeat="item in webPublisherContentLists.metadataList" class="grid">
+                                    <div class="grid__item grid__item--col-5">
+                                        <input class="sd-line-input__input" type="text" ng-model="item.metaName" placeholder="Name">
+                                    </div>
+                                    <div class="grid__item grid__item--col-5">
+                                        <input class="sd-line-input__input" type="text" ng-model="item.metaValue" placeholder="Value">
+                                    </div>
+                                    <div class="grid__item grid__item--col-2">
+                                        <button
+                                            type="button"
+                                            class="btn btn--alert btn--small btn--icon-only btn--hollow"
+                                            ng-click="webPublisherContentLists.removeMetadata($index)"
+                                            tooltip="{{:: 'Remove'|translate}}"
+                                            tooltip-placement="bottom"
+                                            tooltip-popup-delay="500">
+                                            <i class="icon-close-small"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                                <button
+                                    type="button"
+                                    class="btn btn--primary btn--icon-only margin--top"
+                                    ng-click="webPublisherContentLists.addMetadata()"
+                                    sd-tooltip="{{:: 'Add metadata'|translate}}"
+                                    flow="right"
+                                >
+                                    <i class="icon-plus-large"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="side-panel__footer side-panel__footer--button-box">
+                    <div class="flex-grid flex-grid--boxed-small flex-grid--small-1">
+                        <a class="btn btn--primary btn--large"
+                        ng-click="webPublisherContentLists.saveListCriteria()"
+                        ng-disabled="loading"
+                        >Update Criteria</a>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="paneContent__content paneContent__content--hasFooter contentPadding">
-            <form class="flat">
-                <fieldset class="label-light">
-                    <div class="item" ng-if="routes">
-	                    <label translate>routes</label>
-                        <div sd-meta-terms
-                            class="data"
-                            data-item="webPublisherContentLists"
-                            data-field="selectedRoutes"
-                            data-list="routes"
-                            data-unique="id"
-                            data-header="true"
-                            data-reload-list="true">
-                        </div>
-					</div>
-                    <div class="item">
-	                    <label translate>author</label>
-                        <div class="multiple" ng-repeat="item in newList.filters.author track by $index">
-                            <input type="text" class="line-input" ng-model="newList.filters.author[$index]">
-                            <button
-                                type="button"
-                                class="btn btn--small"
-                                ng-click="webPublisherContentLists.removeAuthor($index)"
-                                tooltip="{{:: 'Remove'|translate}}"
-                                tooltip-placement="bottom"
-                                tooltip-popup-delay="500">
-                                <i class="icon-close-small"></i>
-                            </button>
-                        </div>
-					</div>
-                    <button
-                        type="button"
-                        class="btn btn--primary btn--small"
-                        ng-click="webPublisherContentLists.addAuthor()"
-                        tooltip="{{:: 'Add author'|translate}}"
-                        tooltip-placement="right"
-                        tooltip-popup-delay="500">
-                        <i class="svg-icon-plus"></i>
-                    </button>
-                    <div class="item">
-                        <label for="publishedAt" translate>publish date</label>
-                        <div sd-datepicker data-format="YYYY-MM-DD" name="publishedAt" id="publishedAt" ng-model="newList.filters.publishedAt"></div>
-                    </div>
-                    <div class="item">
-                        <label for="publishedBefore" translate>published before</label>
-                        <div sd-datepicker data-format="YYYY-MM-DD" name="publishedBefore" id="publishedBefore" ng-model="newList.filters.publishedBefore"></div>
-                    </div>
-                    <div class="item">
-                        <label for="publishedAfter" translate>published after</label>
-                        <div sd-datepicker data-format="YYYY-MM-DD" name="publishedAfter" id="publishedAfter" ng-model="newList.filters.publishedAfter"></div>
-                    </div>
-                    <div class="item">
-	                    <label translate>metadata</label>
-                        <div class="field" ng-if="webPublisherContentLists.metadataList.length>0">
-                            <label translate>Name</label>
-                            <label translate>Value</label>
-                        </div>
-                        <div class="multiple" ng-repeat="item in webPublisherContentLists.metadataList">
-                            <input type="text" class="line-input" ng-model="item.metaName">
-                            <input type="text" class="line-input" ng-model="item.metaValue">
-                            <button
-                                type="button"
-                                class="btn btn--small"
-                                ng-click="webPublisherContentLists.removeMetadata($index)"
-                                tooltip="{{:: 'Remove'|translate}}"
-                                tooltip-placement="bottom"
-                                tooltip-popup-delay="500">
-                                <i class="icon-close-small"></i>
-                            </button>
-                        </div>
-					</div>
-                    <button
-                        type="button"
-                        class="btn btn--primary btn--small"
-                        ng-click="webPublisherContentLists.addMetadata()"
-                        tooltip="{{:: 'Add metadata'|translate}}"
-                        tooltip-placement="right"
-                        tooltip-popup-delay="500">
-                        <i class="svg-icon-plus"></i>
-                    </button>
-                </fieldset>
-            </form>
-        </div>
-        <div class="paneContent__footer">
-            <button class="btn btn--large btn--primary btn--expanded" ng-click="webPublisherContentLists.saveListCriteria()" translate>Update Criteria</button>
+        <div class="sd-column-box__main-column relative">
+            <div class="sd-list-item-group sd-shadow--z2">
+                <div sd-list-articles data-list="newList" data-type="detail"></div>
+            </div>
         </div>
     </div>
-
-    <div class="paneLayout__content">
-        <div class="contentPadding">
-            <h3 class="text--uppercase text--bold text--smallHeading" translate>Content List Articles</h3>
-            <div sd-list-articles data-list="newList" data-type="detail"></div>
-        </div>
-    </div>
-
 </div>
