--- a/client/views/content-lists/index.html
+++ b/client/views/content-lists/index.html
@@ -1,158 +1,61 @@
-<div class="subnav subnav--absolute">
-    <h3 class="page-nav-title"><span translate>Content Lists:</span> <b>{{ webPublisherContentLists.selectedTenant.name }}</b></h3>
-</div>
+<div class="sd-page-grid--basic" doc-modal>
+    <header class="sd-top-menu">
+        <a href="" class="sd-top-menu__collapse-nav"><i class="icon-collapse icon--white"></i></a>
+        <p class="sd-top-menu__header">Publisher</p>
+    </header>
 
-<div class="paneLayout paneLayout--headerMargin">
-    <div class="paneLayout__content">
-        <div class="contentPadding">
-            <div class="split-content">
-                <div class="header" ng-if="webPublisherContentLists.activeView == 'content-lists'">
-                    <div class="subnav subnav--absolute">
-                        <div class="dropdown navbtn--text-only" dropdown>
-                            <button class="dropdown__toggle" dropdown-toggle>
-                                {{ webPublisherContentLists.selectedTenant.name }}
-                                <span ng-if="!webPublisherContentLists.selectedTenant">{{ :: 'Choose tenant' | translate }}</span>
-                                <span class="dropdown__caret"></span>
-                            </button>
-                            <ul class="dropdown__menu scrollable">
-                                <li ng-repeat="site in webPublisherContentLists.sites">
-                                    <button class="label-group" ng-click="webPublisherContentLists.setTenant(site)">{{:: site.name }}</button>
-                                </li>
-                            </ul>
-                        </div>
-
-                        <ul class="filter-type filter-type--padded rightPadding" ng-if="webPublisherContentLists.selectedTenant">
-                            <li class="filter-type__item" ng-class="{'filter-type__item--active': webPublisherContentLists.listType === ''}">
-                                <a ng-click="webPublisherContentLists.changeListFilter('')" translate>all</a>
-                            </li>
-                            <li class="filter-type__item" ng-class="{'filter-type__item--active': webPublisherContentLists.listType === 'automatic'}">
-                                <a ng-click="webPublisherContentLists.changeListFilter('automatic')" class="filter-type__link--dark-blue" translate>automatic</a>
-                            </li>
-                            <li class="filter-type__item" ng-class="{'filter-type__item--active': webPublisherContentLists.listType === 'manual'}">
-                                <a ng-click="webPublisherContentLists.changeListFilter('manual')" class="filter-type__link--blue" translate>manual</a>
+    <section class="sd-content sd-page-content--slide-in">
+        <div class="sd-sidebar-menu sd-sidebar-menu--second-level sd-page-content__left-tabs" ng-include="'sidebar-content.html'"></div>
+        <div class="sd-page-content__content-block"
+            ng-class="{'sd-page-content__content-block--double-sidebar': webPublisherContentLists.activeView!='content-liss', 'open-filters': webPublisherContentLists.filterOpen}">
+            <div class="subnav">
+                <a href="#/publisher/dashboard" class="navbtn navbtn--left">
+                    <i class="icon-arrow-left"></i>
+                </a>
+                <h3 class="subnav__page-title">Content Lists</h3>
+                <div class="dropdown dropdown--align-right" dropdown="">
+                    <button class="navbtn dropdown sd-create-btn dropdown-toggle" dropdown__toggle="" aria-haspopup="true" aria-expanded="false">
+                        <i class="icon-plus-large"></i>
+                        <span class="circle"></span>
+                    </button>
+                    <ul class="dropdown__menu dropdown--align-right">
+                        <li>
+                            <div class="dropdown__menu-label">Create new list</div>
+                        </li>
+                        <li class="dropdown__menu-divider"></li>
+                        <li><button ng-click="webPublisherContentLists.createListCard('automatic')">Automatic List</button></li>
+                        <li><button ng-click="webPublisherContentLists.createListCard('manual')">Manual List</button></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="sd-column-box--3">
+                <div class="sd-content-navigation-panel sd-content-navigation-panel--border-right overflow-auto">
+                    <div class="subnav subnav--padded subnav--lower-z-index">
+                        <h3 class="sd-content-nav-title">Website</h3>
+                    </div>
+                    <nav class="sd-content-nav">
+                        <ul>
+                            <li ng-repeat="site in webPublisherContentLists.sites">
+                                <a href="" class="sd-content-nav__btn"
+                                    ng-click="webPublisherContentLists.setTenant(site)"
+                                    ng-class="{'sd-content-nav__btn--active' : webPublisherContentLists.selectedTenant.code === site.code}">
+                                    {{:: site.name }}</a>
                             </li>
                         </ul>
-
-                        <div class="subnav__stretch-bar"></div>
-
-                        <div class="dropdown navbtn strict" title="{{ :: 'Create' | translate }}" ng-if="webPublisherContentLists.selectedTenant" dropdown>
-                            <button class="dropdown__toggle sd-create-btn" dropdown__toggle ng-disabled="webPublisherContentLists.listAdd"></button>
-
-                            <ul class="dropdown__menu dropdown__menu--scrollable pull-right">
-                                <li><div class="dropdown__menu-label" translate>Create new item</div></li>
-                                <li>
-                                    <button ng-click="webPublisherContentLists.createListCard('automatic')">
-                                        <i class="icon-plus-sign icon--blue"></i>{{:: 'Automatic list'| translate}}
-                                    </button>
-                                </li>
-                                <li>
-                                    <button ng-click="webPublisherContentLists.createListCard('manual')">
-                                        <i class="icon-plus-sign icon--blue"></i>{{:: 'Manual list'| translate}}
-                                    </button>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+                    </nav>
                 </div>
-                <div class="content">
-                    <div ng-switch="webPublisherContentLists.activeView">
-                        <div ng-switch-when="content-list-automatic">
-                            <div ng-include="'content-list-automatic.html'"></div>
-                        </div>
-                        <div ng-switch-when="content-list-manual">
-                            <div ng-include="'content-list-manual.html'"></div>
-                        </div>
-                        <div class="headerMargin" ng-switch-when="content-lists">
-                            <div ng-if="!webPublisherContentLists.selectedTenant" class="sd-alert sd-alert--hollow">
-                                To manage Content Lists, first choose tenant from dropdown.
-                            </div>
-                            <div class="flex-grid box wrap-items small-1 medium-2 large-3 xlarge-4">
-                                <div class="flex-item card-box" ng-if="list.type !== 'bucket'" ng-repeat="list in lists | filter: {type: webPublisherContentLists.listType} | orderBy: 'id' track by list.id"
-                                    ng-class="{'active': list.type === 'manual'}">
-                                    <div class="card-box__header">
-                                        <div ng-if="!webPublisherContentLists._editMode(list, webPublisherContentLists.selectedList, webPublisherContentLists.listAdd)" class="dropdown" dropdown>
-                                            <button class="dropdown__toggle dropdown--align-right" dropdown__toggle>
-                                                <i class="icon-dots-vertical"></i>
-                                            </button>
-                                            <ul class="dropdown__menu">
-                                                <li>
-                                                    <button ng-click="webPublisherContentLists.openListCriteria(list)" title="{{:: 'Edit list'| translate }}">
-                                                        <i class="icon-pencil"></i>{{:: 'Edit'| translate}}
-                                                    </button>
-                                                </li>
-                                                <li>
-                                                    <button ng-click="webPublisherContentLists.editListCardSettings(list)" title="{{:: 'Settings'| translate }}">
-                                                        <i class="icon-settings"></i>{{:: 'Settings'| translate}}
-                                                    </button>
-                                                </li>
-                                                <li>
-                                                    <button ng-click="webPublisherContentLists.deleteList(list.id)" title="{{:: 'Remove list'| translate }}">
-                                                        <i class="icon-trash"></i>{{:: 'Remove'| translate}}
-                                                    </button>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                        <div ng-if="webPublisherContentLists._editMode(list, webPublisherContentLists.selectedList, webPublisherContentLists.listAdd)" class="card-box__btn-group card-box__btn-group--right">
-                                            <button ng-click="webPublisherContentLists.cancelEditListCard()" class="btn">
-                                                <i class="icon-close-small"></i>
-                                            </button>
-                                            <button ng-click="webPublisherContentLists.saveList()" class="btn">
-                                                <i class="icon-ok"></i>
-                                            </button>
-                                        </div>
-                                        <div ng-if="!webPublisherContentLists._editMode(list, webPublisherContentLists.selectedList, webPublisherContentLists.listAdd)"
-                                            ng-click="webPublisherContentLists.editListCard(list)"
-                                            class="card-box__heading card-box__heading--editable">
-                                            <div>{{ list.name }}</div>
-                                        </div>
-                                        <div ng-if="webPublisherContentLists._editMode(list, webPublisherContentLists.selectedList, webPublisherContentLists.listAdd)" class="card-box__heading card-box__heading--editable">
-                                            <input type="text" ng-model="newList.name" class="line-input line-input--alt" required sd-card-input-focus>
-                                        </div>
-                                    </div>
-
-                                    <div class="card-box__content card-box__content--scrollable">
-                                        <ul class="card-box__content-list">
-                                            <div sd-list-articles data-list="list" data-type="card"></div>
-                                        </ul>
-                                    </div>
-
-                                    <div class="card-box__footer">
-                                        <span class="text--lighter text--small text--uppercase">Last Modified:</span>
-                                        <span class="leftSpace text--small">{{ list.updatedAt | reldate}}</span>
-                                        <span class="pull-right state-label state-published" ng-show="list.enabled" translate>active</span>
-                                        <span class="pull-right state-label state-killed" ng-hide="list.enabled" translate>inactive</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div class="sd-column-box__main-column relative"
+                    ng-include="'content-lists-list.html'"
+                    ng-if="webPublisherContentLists.activeView==='content-lists'"></div>
+                <div class="flex-grid flex-grid--grow flex-grid--small-1"
+                    ng-include="'content-list-automatic.html'"
+                    ng-if="webPublisherContentLists.activeView==='content-list-automatic'"></div>
+                <div class="flex-grid flex-grid--grow flex-grid--small-2"
+                    ng-include="'content-list-manual.html'"
+                    ng-if="webPublisherContentLists.activeView==='content-list-manual'"></div>
             </div>
         </div>
-
-        <div sd-modal data-model="webPublisherContentLists.settingsModal" class="modal--double">
-            <div class="modal__header">
-                <a href="" class="close" ng-click="webPublisherContentLists.cancelListCardSettings()"><i class="icon-close-small"></i></a>
-                <h3 translate>Settings</h3>
-            </div>
-            <div class="modal__body">
-                <form name="settingsForm">
-                    <fieldset>
-                        <div class="field">
-                            <label for="listLimit" translate>number of articles limit</label>
-                            <input type="number" id="listLimit" class="line-input" ng-model="newList.limit" min="0">
-                        </div>
-                        <div class="field">
-                            <label for="listCacheLifeTime" translate>cache lifetime</label>
-                            <input type="number" id="listCacheLifeTime" class="line-input" ng-model="newList.cacheLifeTime" min="0" required>
-                        </div>
-                    </fieldset>
-                </form>
-            </div>
-            <div class="modal__footer">
-                <button class="btn" ng-click="webPublisherContentLists.cancelListCardSettings()" translate>Cancel</button>
-                <button class="btn btn--primary" ng-click="webPublisherContentLists.saveList()" ng-disabled="!settingsForm.$valid" translate>Save</button>
-            </div>
-        </div>
-    </div>
+    </section>
+    <footer class="bottom-bar ">
+    </footer>
 </div>
