--- a/client/views/dashboard/index.html
+++ b/client/views/dashboard/index.html
@@ -3,8 +3,7 @@
         <a href="" class="sd-top-menu__collapse-nav"><i class="icon-collapse icon--white"></i></a>
         <p class="sd-top-menu__header">Publisher</p>
     </header>
-    <section class="sd-content sd-page-content--slide-in" ng-class="{
-            'sd-page-content--slide-in--open' : editorOpen}">
+    <section class="sd-content sd-page-content--slide-in">
         <div class="sd-sidebar-menu sd-sidebar-menu--second-level sd-page-content__left-tabs" ng-include="'sidebar-content.html'"></div>
         <div class="sd-page-content__content-block">
             <div class="subnav">
@@ -51,6 +50,5 @@
 
     </section>
     <footer class="bottom-bar ">
-        This is the optional footer.
     </footer>
 </div>
