--- a/client/views/dashboard/tenant.html
+++ b/client/views/dashboard/tenant.html
@@ -23,7 +23,7 @@
         </div>
         <div class="btn-icon-group" ng-if="!site.outputChannel">
             <!-- <a class="btn btn--icon-only-circle btn--large btn--hollow" sd-tooltip="Analytics" flow="down"><i class="icon-analytics"></i></a> -->
-            <a class="btn btn--icon-only-circle btn--large btn--hollow" sd-tooltip="Content lists" flow="down"><i class="icon-unordered-list"></i></a>
+            <a ng-href="#/publisher/content_lists/{{site.code}}" class="btn btn--icon-only-circle btn--large btn--hollow" sd-tooltip="Content lists" flow="down"><i class="icon-unordered-list"></i></a>
             <a ng-click="webPublisher.activateLiveSite(site)" class="btn btn--primary btn--icon-only-circle btn--large btn--hollow" sd-tooltip="Livesite editor" flow="down"><i class="icon-pencil"></i></a>
         </div>
         <i ng-if="site.outputChannel" class="sp-logo-wordpress" sd-tooltip="Wordpress" flow="left"></i>
