--- a/client/views/content-lists/index.html
+++ b/client/views/content-lists/index.html
@@ -7,7 +7,7 @@
     <section class="sd-content sd-page-content--slide-in">
         <div class="sd-sidebar-menu sd-sidebar-menu--second-level sd-page-content__left-tabs" ng-include="'sidebar-content.html'"></div>
         <div class="sd-page-content__content-block"
-            ng-class="{'sd-page-content__content-block--double-sidebar': webPublisherContentLists.activeView!='content-liss', 'open-filters': webPublisherContentLists.filterOpen}">
+            ng-class="{'sd-page-content__content-block--double-sidebar': webPublisherContentLists.activeView!='content-lists', 'open-filters': webPublisherContentLists.filterOpen}">
             <div class="subnav">
                 <a href="#/publisher/dashboard" class="navbtn navbtn--left">
                     <i class="icon-arrow-left"></i>
