--- a/client/views/sidebar-content.html
+++ b/client/views/sidebar-content.html
@@ -9,7 +9,12 @@
         <a href="#/publisher/output-control" class="sd-sidebar-menu__btn"
             ng-class="{'sd-sidebar-menu__btn--active': currentRoute.href === '/publisher/output-control'}">
             <i class="sd-sidebar-menu__main-icon big-icon--web"></i>
-            <i class="sd-sidebar-menu__helper-icon big-icon--chevron-left"></i>
         </a>
     </li>
+    <li sd-tooltip="Settings" flow="right">
+            <a href="#/publisher/settings" class="sd-sidebar-menu__btn"
+                ng-class="{'sd-sidebar-menu__btn--active': currentRoute.href === '/publisher/settings'}">
+                <i class="sd-sidebar-menu__main-icon big-icon--settings"></i>
+            </a>
+        </li>
 </ul>
