--- a/client/views/settings/rule-add-organization.html
+++ b/client/views/settings/rule-add-organization.html
@@ -17,11 +17,11 @@
 			<div class="inlineBlock pull-right">
 				<label class="inlineBlock form-label">Catch all</label><span ng-model="newRule.catchAll" sd-switch=""></span>
 			</div>
-			<div class="form__row form__row--flex bottomMargin0"
+			<div class="form__row form__row--flex margin--bottom0"
 				ng-if="!newRule.catchAll"
 				ng-repeat="expression in newRule.expressions">
 				<div class="form__row-item">
-					<div class="sd-line-input sd-line-input--is-select bottomMargin0">
+					<div class="sd-line-input sd-line-input--is-select margin--bottom0">
 						<select class="sd-line-input__select"
 							required
 							ng-model="expression.option"
@@ -31,7 +31,7 @@
 					</div>
 				</div>
 				<div class="form__row-item">
-					<div class="sd-line-input sd-line-input--is-select bottomMargin0">
+					<div class="sd-line-input sd-line-input--is-select margin--bottom0">
 						<select class="sd-line-input__select"
 							required
 							ng-disabled="!expression.option"
@@ -42,17 +42,17 @@
 					</div>
 				</div>
 				<div class="form__row-item" ng-if="expression.option.name != 'Category'">
-					<div class="sd-line-input bottomMargin0">
+					<div class="sd-line-input margin--bottom0">
 						<input class="sd-line-input__input" type="text" ng-model="expression.value" ng-disabled="!expression.operator" required>
 					</div>
 				</div>
 				<div class="form__row-item" ng-if="expression.option.name == 'Category'">
-					<div class="sd-line-input sd-line-input--is-select bottomMargin0">
+					<div class="sd-line-input sd-line-input--is-select margin--bottom0">
 						<select class="sd-line-input__select"
 							required
 							ng-disabled="!expression.operator"
 							ng-model="expression.value"
-							">
+							>
 							<option ng-repeat="category in webPublisherSettings.expressionBuilder.categories" value="{{category.name}}">{{category.name}}</option>
 						</select>
 					</div>
@@ -66,7 +66,7 @@
 				</div>
 			</div>
 
-			<div class="form__row topMargin" ng-if="!newRule.catchAll">
+			<div class="form__row margin--top" ng-if="!newRule.catchAll">
 				<button class="btn"
 					ng-click="webPublisherSettings.addRuleExpression()"
 					ng-disabled="!newRule.expressions[newRule.expressions.length-1].value">
@@ -75,7 +75,7 @@
 			</div>
 		</span>
 		<label class="form-label">Destination (Tenants)</label>
-		<div class="sd-list-item sd-shadow--z1 bottomSpace" ng-repeat="destination in newRule.destinations">
+		<div class="sd-list-item sd-shadow--z1 margin--bottom" ng-repeat="destination in newRule.destinations">
 			<div class="sd-list-item__border"></div>
 			<div class="sd-list-item__column sd-list-item__column--grow sd-list-item__column--no-border">
 				<div class="sd-list-item__row">
