--- a/client/views/settings/rule-add-tenant.html
+++ b/client/views/settings/rule-add-tenant.html
@@ -28,10 +28,10 @@
 
         <label class="form-label" ng-if="!newRule.id">Expression</label>
         <div ng-if="!newRule.id"
-            class="form__row form__row--flex bottomMargin0"
+            class="form__row form__row--flex margin--bottom0"
             ng-repeat="expression in newRule.expressions">
             <div class="form__row-item">
-                <div class="sd-line-input sd-line-input--is-select bottomMargin0">
+                <div class="sd-line-input sd-line-input--is-select margin--bottom0">
                     <select class="sd-line-input__select"
                         required
                         ng-model="expression.option"
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="form__row-item">
-                <div class="sd-line-input sd-line-input--is-select bottomMargin0">
+                <div class="sd-line-input sd-line-input--is-select margin--bottom0">
                     <select class="sd-line-input__select"
                         required
                         ng-disabled="!expression.option"
@@ -52,12 +52,12 @@
                 </div>
             </div>
             <div class="form__row-item" ng-if="expression.option.name != 'Category'">
-                <div class="sd-line-input bottomMargin0">
+                <div class="sd-line-input margin--bottom0">
                     <input class="sd-line-input__input" type="text" ng-model="expression.value" ng-disabled="!expression.operator" required>
                 </div>
             </div>
             <div class="form__row-item" ng-if="expression.option.name == 'Category'">
-                <div class="sd-line-input sd-line-input--is-select bottomMargin0">
+                <div class="sd-line-input sd-line-input--is-select margin--bottom0">
                     <select class="sd-line-input__select"
                         required
                         ng-disabled="!expression.operator"
@@ -76,7 +76,7 @@
             </div>
         </div>
 
-        <div ng-if="!newRule.id" class="form__row topMargin">
+        <div ng-if="!newRule.id" class="form__row margin--top">
             <button class="btn"
                 ng-click="webPublisherSettings.addRuleExpression()"
                 ng-disabled="!newRule.expressions[newRule.expressions.length-1].value">
